<resources>
    <string name="app_name">Contacts List</string>
    <string name="title_activity_main">Contacts List</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="txt_location">Location:</string>
    <string name="txt_fullName">Full Name:</string>
    <string name="txt_SMS">SMS</string>
    <string name="txt_Call">Call</string>
    <string name="txt_phone_no">Phone No:</string>
    <string name="txt_position">Position:</string>
    <string name="txt_call_button">Call Button</string>
    <string name="txt_send_sms">Send SMS</string>
    <string name="txt_call_number">Call Number</string>
    <string name="txt_select_a_group_to_send_sms">Select a Group to send SMS</string>
    <string name="txt_select_group_and_write_your_message_here">Select Group and write your message here</string>
    <string name="txt_send">Send</string>
    <string name="txt_auto_fill">Auto Fill</string>
    <string name="txt_yosef_fekadu">Yosef Fekadu</string>
    <string name="fekaduyosef_gmail_com">fekaduyosef@gmail.com</string>
    <string name="_251_911_183380">+251 911 183380</string>
    <string name="txt_year">Year</string>
    <string name="_2020">2020</string>
    <string name="txt_last_updated">Last Updated</string>
    <string name="_10_2_2020">10/2/2020</string>
    <string name="txt_version">Version</string>
    <string name="_2_1">2.1</string>
    <string name="_3_regions_12_zones_44_districts_1_vl_team">Regions</string>
    <string name="_individual_contact_lists">337 Individual Contact Lists</string>
    <string name="txt_home">HOME</string>
    <string name="txt_call_image">Call Image</string>
    <string name="yosef_image">Yosef Image</string>
    <string name="email_image">Email Image</string>
    <string name="txt_yosef_fekadu1">Yosef Fekadu</string>
    <string name="txt_email">yoseffekadu@yahoo.com</string>
    <string name="txt_contacts">Contacts</string>
    <string name="txt_group_sms">Group SMS</string>
    <string name="txt_checklist">Checklist</string>
    <string name="txt_about">About</string>
    <string name="txt_individuals">Individuals</string>
    <string name="txt_districts">Districts</string>
    <string name="txt_zones">Zones</string>
    <string name="txt_regions">Regions</string>
    <string name="txt_region_num">4</string>
    <string name="txt_zone_num">13</string>
    <string name="txt_district_num">46</string>
    <string name="txt_individual_num">400</string>
</resources>
