<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Contacts"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/txt_contacts" />
        <item
            android:id="@+id/nav_group_sms"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/txt_group_sms" />
        <item
            android:id="@+id/nav_check_list"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/txt_checklist" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info_icon2"
            android:title="@string/txt_about" />
    </group>
</menu>