<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GroupSMS">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="false"
        android:background="#FFFFFF">

        <androidx.appcompat.widget.LinearLayoutCompat

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="330dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:background="@android:color/holo_orange_dark"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_select_a_group_to_send_sms"
                        android:textSize="28sp"></TextView>

                    <Spinner
                        android:id="@+id/spinnerGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.289" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="380dp"
                    android:layout_height="160dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="155dp"
                    android:background="#ffffff">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <EditText
                            android:id="@+id/SMS"
                            style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:autofillHints="@string/txt_auto_fill"
                            android:background="#ffffff"
                            android:ems="30"
                            android:gravity="start|top"
                            android:hint="@string/txt_select_group_and_write_your_message_here"
                            android:inputType="textMultiLine"
                            android:lines="5"
                            android:textColor="#000000" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/bulkEmail_send"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/buttonstylegradient"
                    android:text="@string/txt_send" />

            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</LinearLayout>