<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="false"
        android:background="#FFFFFF">


        <androidx.appcompat.widget.LinearLayoutCompat

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="560dp"
                android:background="#FFFFFF">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="455dp"
                    android:background="?android:attr/colorFocusedHighlight"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="61dp"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/regionSP"
                            android:layout_width="match_parent"
                            android:layout_height="61dp"
                            android:layout_margin="10dp"
                            android:scrollbarSize="18dp"
                            android:textSize="18sp"
                            android:textStyle="bold"></Spinner>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="61dp"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/zoneSP"
                            android:layout_width="match_parent"
                            android:layout_height="51dp"
                            android:layout_margin="10dp"
                            android:textSize="24sp"
                            android:textStyle="bold"></Spinner>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="61dp"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/districtSP"
                            android:layout_width="match_parent"
                            android:layout_height="51dp"
                            android:layout_margin="10dp"
                            android:textSize="24sp"
                            android:textStyle="bold"></Spinner>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="61dp"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/actorSP"
                            android:layout_width="match_parent"
                            android:layout_height="51dp"
                            android:layout_margin="10dp"
                            android:textSize="24sp"
                            android:textStyle="bold"></Spinner>


                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="40dp"
                            android:layout_marginHorizontal="15dp"
                            android:text="@string/txt_location"
                            android:textSize="18sp"></TextView>

                        <TextView
                            android:id="@+id/location"
                            android:layout_width="200dp"
                            android:layout_height="40dp"
                            android:textColor="#F50057"
                            android:textSize="14sp"></TextView>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="330dp"
                    android:layout_height="160dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="385dp"
                    android:background="#F7F8F8">

                    <LinearLayout
                        android:layout_width="377dp"
                        android:layout_height="154dp"
                        android:background="#F7F8F8"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:weightSum="3">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginTop="30dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txtFullName"
                                android:layout_width="100dp"
                                android:layout_height="40dp"
                                android:layout_marginHorizontal="15dp"
                                android:text="@string/txt_fullName"
                                android:textColor="#040303"
                                android:textSize="18sp"
                                android:textStyle="bold"></TextView>

                            <TextView
                                android:id="@+id/fullName"
                                android:layout_width="200dp"
                                android:layout_height="40dp"
                                android:textColor="#3500F5"
                                android:textSize="18sp"></TextView>

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="100dp"
                                android:layout_height="40dp"
                                android:layout_marginHorizontal="15dp"
                                android:text="@string/txt_position"
                                android:textColor="#040303"
                                android:textSize="18sp"
                                android:textStyle="bold"></TextView>

                            <TextView
                                android:id="@+id/position"
                                android:layout_width="200dp"
                                android:layout_height="40dp"
                                android:textColor="#3500F5"
                                android:textSize="18sp"></TextView>

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:animateLayoutChanges="true"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="100dp"
                                android:layout_height="40dp"
                                android:layout_marginHorizontal="15dp"
                                android:text="@string/txt_phone_no"
                                android:textColor="#040303"
                                android:textSize="17sp"
                                android:textStyle="bold"></TextView>

                            <TextView
                                android:id="@+id/phoneNo"
                                android:layout_width="250dp"
                                android:layout_height="40dp"
                                android:textColor="#3500F5"
                                android:textSize="32sp"></TextView>

                            <androidx.fragment.app.FragmentContainerView
                                android:id="@+id/nav_host_fragment"
                                android:name="androidx.navigation.fragment.NavHostFragment"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:defaultNavHost="true"
                                app:navGraph="@navigation/mobile_navigation" />


                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="invisible"
                android:weightSum="3">

                <ImageButton
                    android:id="@+id/btn_call"
                    android:layout_width="65dp"
                    android:layout_height="55dp"
                    android:contentDescription="@string/txt_call_button"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_local_phone_black_24dp" />

            </LinearLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>